[package]
name = "encode-nexus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
eframe = { version = "0.27.2", features = ["serde", "persistence"] }
egui = "0.27.2"
egui-snarl = { version = "0.3.0", features = ["serde"] }
glob = "0.3.1"
indexmap = { version = "2.2.6", features = ["serde"] }
mlua = { version = "0.9.7", features = ["luau", "macros", "send"] }
once_cell = "1.19.0"
petgraph = "0.6.4"
rfd = "0.14.1"
ron = "0.8.1"
serde = "1.0.197"

[patch.crates-io]
egui-snarl = { git = "https://github.com/Wybxc/egui-snarl.git", branch = "patch" }
